recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:10: error: recursive variable length needs type
	var length = length+incre
                     ^